// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ACM Certificate Construct Test Suite Snapshots certificate construct matches snapshot 1`] = `
{
  "Outputs": {
    "TestCertificateCertificateArnOutput7E64C7F9": {
      "Description": "ACM Certificate ARN for example.com",
      "Export": {
        "Name": "test-certificate-arn",
      },
      "Value": {
        "Ref": "TestCertificateC33812FB",
      },
    },
    "TestCertificateCertificateDomainNameF74523EF": {
      "Description": "Primary domain name for the certificate",
      "Export": {
        "Name": "test-certificate-domain",
      },
      "Value": "example.com",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "TestCertificateC33812FB": {
      "Properties": {
        "DomainName": "example.com",
        "DomainValidationOptions": [
          {
            "DomainName": "example.com",
            "HostedZoneId": "Z1234567890ABC",
          },
        ],
        "SubjectAlternativeNames": [
          "*.example.com",
        ],
        "Tags": [
          {
            "Key": "DomainName",
            "Value": "example.com",
          },
          {
            "Key": "Environment",
            "Value": "test",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Name",
            "Value": "TestStack/TestCertificate/Certificate",
          },
        ],
        "ValidationMethod": "DNS",
      },
      "Type": "AWS::CertificateManager::Certificate",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`ACM Certificate Construct Test Suite Snapshots certificate resource matches snapshot 1`] = `
{
  "TestCertificateC33812FB": {
    "Properties": {
      "DomainName": "example.com",
      "DomainValidationOptions": [
        {
          "DomainName": "example.com",
          "HostedZoneId": "Z1234567890ABC",
        },
      ],
      "Tags": [
        {
          "Key": "DomainName",
          "Value": "example.com",
        },
        {
          "Key": "Environment",
          "Value": "test",
        },
        {
          "Key": "ManagedBy",
          "Value": "CDK",
        },
        {
          "Key": "Name",
          "Value": "TestStack/TestCertificate/Certificate",
        },
      ],
      "ValidationMethod": "DNS",
    },
    "Type": "AWS::CertificateManager::Certificate",
  },
}
`;
